# SecureCodeAI

./: .env.example  .gitignore  .securecodeai.yaml  README.md  comprehensive_test_metrics.json  pyproject.toml  realistic_scenario_results.json  test_integrated_vulnerabilities.py  test_realistic_scenario.py  test_sample.py  test_vulnerable_code.py
expected_outputs/: sample_detailed_analysis_output.json  sample_expert_classifier_output.json
src/securecodeai/: __init__.py
src/securecodeai/chunking/: __init__.py  cache.py  config.py  exceptions.py  orchestrator.py
src/securecodeai/chunking/models/: __init__.py  chunk.py  context.py  findings.py
src/securecodeai/chunking/parsers/: __init__.py  base.py  language_registry.py  tree_sitter_parser.py
src/securecodeai/chunking/strategies/: __init__.py  ast_strategy.py  base_strategy.py  focus_strategy.py  function_strategy.py  hybrid_strategy.py  semantic_strategy.py
src/securecodeai/chunking/utils/: __init__.py  metrics.py  token_counter.py
src/securecodeai/cli/: __init__.py  main.py
src/securecodeai/core/: __init__.py  analyzer.py  config.py  models.py
src/securecodeai/llm/: __init__.py  groq_client.py
src/securecodeai/prompts/: broken_cryptographic_algorithms_detection_cwe327.json  buffer_overflow_write_cwe787.json  cleartext_storage_sensitive_info_detection_cwe312.json  command_injection_detection_cwe77_78.json  cors_misconfiguration_detection_cwe942.json  cryptographically_weak_prng_detection_cwe338.json  csrf_detection_cwe352.json  debug_features_enabled_production_detection_cwe489.json  deserialization_detection_cwe502.json  hardcoded_credentials_detection_cwe798.json  improper_authentication_detection_cwe287.json  improper_certificate_validation_detection_cwe295_Version2.json  improper_link_resolution_detection_cwe59.json  improper_memory_buffer_bounds_detection_cwe119.json  improper_neutralization_special_elements_detection_cwe74.json  improper_output_handling_detection_llm05.json  incorrect_authorization_detection_cwe863.json  insecure_direct_object_references_detection_cwe639.json  insufficient_key_length_detection_cwe326.json  jwt_algorithm_confusion_detection_cwe327.json  missing_authentication_critical_function_detection_cwe306.json  missing_authorization_detection_cwe862.json  missing_security_headers_detection_cwe693.json  nosql_injection_detection_cwe943.json  out_of_bounds_read_detection_cwe125.json  path_traversal_detection_cwe22.json  prompt_injection_detection_llm01.json  race_conditions_detection_cwe362.json  sensitive_info_disclosure_detection_llm02.json  sensitive_information_exposure_detection_cwe200.json  server_side_request_forgery_detection_cwe918.json  server_side_template_injection_detection_cwe94.json  sql_injection_cwe89.json  use_after_free_detection_cwe416.json  xss_detection_cwe79.json  xxe_injection_detection_cwe611.json
src/securecodeai/static_analysis/: __init__.py  bandit_analyzer.py  base.py  orchestrator.py  safety_analyzer.py  semgrep_analyzer.py
src/securecodeai/utils/: __init__.py  output.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_llm.py  test_models.py  test_static_analysis.py
(+11 files in other folders)
